--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>News films</title>
     <link rel="stylesheet" href="css/style.css">
- 	<script type="text/javascript" src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
